Changes for 1.8.3

 - [ZBXNEXT-288] improved server performance by not storing function lastvalue in database (asaveljevs,Sasha)
 - [ZBX-1753] added permission check for trigger sound notifications (Aly)
 - [ZBX-2246] added trigger wizard for logrt item (AM)
 - [ZBX-2241] fixed graph X axis for big periods (Aly)
 - [ZBX-2241] fixed text collide in graphs (Aly)
 - [ZBX-2232] fixed bug with last event duration time in event details (AM)
 - [ZBX-2243] fixed bug when cannot select template for item filter by host (Vedmak)
 - [ZBX-2240] fixed "undefined index" in monitoring latest data (Vedmak)
 - [ZBX-954] fix minor typos (Richlv)

Changes for 1.8.2

 - [ZBX-2084] fixed JSON decoding class, which didn't work due to PCRE backtrace limit, enabled native PHP JSON functions, rewrote code with sockets (AM)
 - [ZBX-2239] fixed mutex (un)locking so that zabbix_server does not become forever defunct when killed (asaveljevs)
 - [ZBX-1983] fixed port validation in host agent port, IPMI port and in discovery checks ports (now supports port ranges like "21-80,465") (AM)
 - [ZBX-2228] fixed compilation under FreeBSD with enabled LDAP (Sasha)
 - [ZBX-2236] fixed processing of Telnet checks by Zabbix proxy (Sasha)
 - [ZBX-2234] fixed icon for mass open action in status of triggers (Aly)
 - [ZBX-2233] fixed processing of action condition 'Trigger <>' (Sasha)
 - [ZBX-1357] updated French translation; thanks to alixen (Richlv)
 - [ZBX-2048] fixed sorting in screens dropdown (Vedmak)
 - [ZBX-2221] fixed expanding/collapsing categories in "Latest Data" (Aly)
 - [ZBX-2225] fixed linkage if templated items are used in graphs as Y axis min and max values (Sasha)
 - [ZBX-2225] complete rewrite of the server code for template linkage (Sasha)
 - [ZBX-2210] added template replace option for hosts mass update (Vedmak)
 - [ZBX-2219] fixed graphs data in data.sql (Aly)
 - [ZBX-1345] time filter redesigned, sliders moved to top inside filter (Vedmak)